<layout>
<ScrollView android:id="@+id/detailsScrollView"
            xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
   <android.support.v7.widget.CardView
       android:id="@+id/cv"
       android:background="@color/moccasin"
       android:layout_width="380dp"
       android:layout_height="50dp"
       android:layout_alignParentTop="true"
       android:layout_centerHorizontal="true"
       app:cardCornerRadius="10dp"
       app:cardElevation="3dp"
       app:cardUseCompatPadding="true">
      <TextView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center"
          android:textSize="20sp"
          android:text="@string/my_password"/>
   </android.support.v7.widget.CardView>

   <GridLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:columnCount="2"
       android:useDefaultMargins="true">

      <TextView
          style="@style/ContactLabelTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="0"
          android:layout_row="0"
          android:text="@string/passord_item_name"/>
      <TextView
          android:id="@+id/name_of_password"
          style="@style/ContactTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="1"
          android:layout_row="0"/>

      <TextView
          style="@style/ContactLabelTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="0"
          android:layout_row="1"
          android:text="@string/tv_input_password"/>

      <EditText
          android:enabled="false"
          android:id="@+id/tv_password"
          style="@style/ContactTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="1"
          android:layout_row="1"/>

      <TextView
          style="@style/ContactLabelTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="0"
          android:layout_row="2"
          android:text="@string/question_1"/>

      <EditText
          android:enabled="false"
          android:id="@+id/tv_question_1"
          style="@style/ContactTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="1"
          android:layout_row="2"/>


      <TextView
          style="@style/ContactLabelTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="0"
          android:layout_row="3"
          android:text="@string/answer_1"/>

      <EditText
          android:enabled="false"
          android:id="@+id/tv_answer_1"
          style="@style/ContactTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="1"
          android:layout_row="3"/>

      <TextView
          style="@style/ContactLabelTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="0"
          android:layout_row="4"
          android:text="@string/question_2"/>

      <EditText
          android:enabled="false"
          android:id="@+id/tv_question_2"
          style="@style/ContactTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="1"
          android:layout_row="4"/>

      <TextView
          style="@style/ContactLabelTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="0"
          android:layout_row="5"
          android:text="@string/answer_2"/>


      <EditText
          android:enabled="false"
          android:id="@+id/tv_answer_2"
          style="@style/ContactTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="1"
          android:layout_row="5"/>

      <TextView
          style="@style/ContactLabelTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="0"
          android:layout_row="6"
          android:text="@string/question_3"/>

      <EditText
          android:enabled="false"
          android:id="@+id/tv_question_3"
          style="@style/ContactTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="1"
          android:layout_row="6"/>
      <TextView
          style="@style/ContactLabelTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="0"
          android:layout_row="7"
          android:text="@string/answer_3"/>
      <EditText
          android:enabled="false"
          android:id="@+id/tv_answer_3"
          style="@style/ContactTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="1"
          android:layout_row="7"/>
   </GridLayout>

   <android.support.design.widget.FloatingActionButton
       android:id="@+id/edit_FloatingActionButton"
       android:layout_width="81dp"
       android:layout_height="wrap_content"
       android:layout_gravity="top|end"
       android:layout_margin="@dimen/fab_margin"
       android:src="@drawable/ic_mode_edit_24dp" />

</LinearLayout>



</ScrollView>
</layout>