<layout>
   <data>

   </data>

<FrameLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent">

   <ScrollView
       android:layout_marginTop="60dp"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

         <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_name_InputLayout">

            <EditText
                android:id="@+id/ed_password_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passord_item_name"
                android:imeOptions="actionNext"
                android:inputType="textCapWords|textPersonName" />

         </android.support.design.widget.TextInputLayout>
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/password_image_InputLayout">

            <EditText
                android:id="@+id/ed_password_image_uri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passord_item_image_uri"
                android:imeOptions="actionNext"
                android:inputType="textCapWords|textPersonName" />

         </android.support.design.widget.TextInputLayout>
         <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_Text_InputLayout">

            <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/ed_password_content"
               android:hint="@string/tv_input_password"
               android:imeOptions="actionNext"
                android:inputType="textPassword"
            />
         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/question_1_Text_InputLayout">

            <EditText
                android:id="@+id/ed_password_question_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question_1"
                android:imeOptions="actionNext" />

         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answer_1_Text_InputLayout">

            <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/ed_password_answer_1"
               android:hint="@string/answer_1"
               android:imeOptions="actionNext"
               android:inputType="textCapWords|textPostalAddress"/>
         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/question_2_Text_InputLayout">

            <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/ed_password_question_2"
               android:hint="@string/question_2"
               android:imeOptions="actionNext"
               android:inputType="textCapWords|textPostalAddress"/>
         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answer_2_Text_InputLayout">

            <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/ed_password_answer_2"
               android:hint="@string/answer_2"
               android:imeOptions="actionNext"
             />
         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/question_3_Text_InputLayout">

            <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/ed_password_question_3"
               android:hint="@string/question_3"
               android:imeOptions="actionNext"
              />
         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/answer_3_Text_InputLayout1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ed_password_answer_3"
                android:hint="@string/answer_3"
                android:imeOptions="actionDone"
                />
         </android.support.design.widget.TextInputLayout>
      </LinearLayout>

   </ScrollView>

   <android.support.design.widget.FloatingActionButton
       android:id="@+id/saveFloatingActionButton"
       android:layout_width="81dp"
       android:layout_height="wrap_content"
       android:layout_gravity="top|end"
       android:layout_margin="@dimen/fab_margin"
       android:src="@drawable/ic_save_24dp" />

</FrameLayout>
</layout>