<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    >

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                app:cardBackgroundColor="@color/test3"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|center_horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical"
                            android:weightSum="1">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:layout_weight="2"
                                android:orientation="horizontal">

                                <de.hdodenhof.circleimageview.CircleImageView
                                    android:id="@+id/image"
                                    android:layout_width="60dp"
                                    android:layout_height="60dp"
                                    android:layout_centerInParent="true"
                                    android:layout_gravity="left"
                                    android:src="@drawable/ic_save_24dp" />

                                <TextView
                                    android:id="@+id/item_passord_name"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="5dp"
                                    android:layout_gravity="center"
                                    android:textSize="20sp"
                                    android:text="@string/passord_item_name"
                                    android:textColor="#ffffff" />

                            </LinearLayout>

                            <LinearLayout

                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="bold"
                                    android:textColor="#ffffff"
                                    android:textSize="20sp"
                                    android:text="@string/password_create_time"
                                    />
                                <TextView
                                    android:id="@+id/tv_password_create_time"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="bold"
                                    />
                            </LinearLayout>

                            <LinearLayout

                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="20sp"
                                    android:fontFamily="bold"
                                    android:textColor="#ffffff"
                                    android:text="@string/password_update_time"
                                    />
                                <TextView
                                    android:id="@+id/tv_password_update_time"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="bold"
                                    />
                            </LinearLayout>

                        </LinearLayout>

                    </RelativeLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

    </LinearLayout>


